<resources>
    <string name="app_name">quickliate</string>
    <string name="title_activity_p2">p_2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_p3">p_3</string>
    <string name="title_activity_p4">p_4</string>
    <string name="title_activity_p5">p_5</string>
    <string name="title_activity_p6">p_6</string>
    <string name="title_activity_p7">p_7</string>
    <string name="title_activity_p9">p_9</string>
    <string name="title_activity_p10">p_10</string>
    <string name="title_activity_p11">p_11</string>
    <string name="title_activity_p12">p_12</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="botonsiguiente">siguiente</string>
    <string name="tv1">primer activity</string>


    <string name="boton_anterior">Home</string>
    <string name="tv2">primer segundo</string>
    <string name="conten_desc_datos_image">datos</string>
    <string name="conten_desc_alarma_imagen">alarma imagen</string>
    <string name="conten_desc_configuracion_imagen">configuracion imagen</string>
    <string name="conten_desc_engranage_imagen">engranage imagen</string>
    <string name="text_hola_apuertas2021">Hola Apuertas2021</string>
    <string name="texto_nov_07_2021">Nov 07, 2021</string>
    <string name="conten_desc_foto_perfil">foto perfil</string>
    <string name="conten_desc_logo">logo</string>
    <string name="conten_desc_ubicacion_imagen">ubicacion imagen</string>
    <string name="conten_desc_mas_imagen">mas imagen</string>
    <string name="text_Hola_administrador">Hola Administrador</string>
    <string name="text_nov_07_2021">Nov 07, 2021</string>
    <string name="conten_desc_usuarios_imagen">usuarios imagen</string>
    <string name="content_desc_icono_usuarios">icono usuarios</string>
    <string name="content_desc_icono_datos">icono datos</string>
    <string name="usuarios_imagen">usuarios imagen</string>
    <string name="alarmas_imagen">alarmas imagen</string>
    <string name="configuracion_imagen">configuracion imagen</string>
    <string name="engranage_imagen">engranage_imagen</string>
    <string name="logo_purpura">logo purpura</string>
    <string name="foto">foto</string>
    <string name="perfil">perfil</string>
    <string name="imgdato">imgdato</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="agregar_nuevo_usuario">Agregar nuevo usuario</string>
    <string name="cargo">Cargo</string>
    <string name="Departamento">Departamento</string>
    <string name="Municipio">Municipio</string>
    <string name="Telefono_m_vil">Telefono móvil</string>
    <string name="direccion_de_residencia">direccion_de_residencia</string>
    <string name="nombre_y_apellido">Nombre y Apellido</string>
    <string name="agregar_foto_de_perfil">Agregar foto de perfil</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="latitude_label">Latitud</string>
    <string name="longitude_label">Longitud</string>

    <string-array name="lista_sensores_gps">
        <item>Sensor temp 1</item>
        <item>Sensor temp 2</item>
        <item>Sensor hum 1</item>
        <item>Sensor hum 2</item>
    </string-array>

</resources>