<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_p13">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.Quickliate.PopupOverlay" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="73dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="196dp"
        android:contentDescription="@string/conten_desc_datos_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/iconografica" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="90dp"
        android:layout_height="73dp"
        android:layout_marginTop="328dp"
        android:layout_marginStart="168dp"
        android:contentDescription="@string/conten_desc_alarma_imagen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/iconoalertas"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="90dp"
        android:layout_height="73dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="448dp"
        android:contentDescription="@string/conten_desc_engranage_imagen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/iconoconfiguracion"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/text_hola_apuertas2021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_nov_07_2021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="-65dp"
        android:layout_marginTop="-2dp"
        android:contentDescription="@string/conten_desc_foto_perfil"
        app:layout_constraintStart_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/zd" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="-250dp"
        android:contentDescription="@string/conten_desc_logo"
        app:layout_constraintStart_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>