<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/content_desc_icono_usuarios"
    tools:context=".Activity7">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:popupTheme="@style/Theme.Quickliate.PopupOverlay" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="120dp"
        android:layout_height="93dp"
        android:contentDescription="@string/usuarios_imagen"
        android:onClick="usuarios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219"
        app:srcCompat="@mipmap/iconopersonas" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="120dp"
        android:layout_height="93dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="139dp"
        android:contentDescription="@string/content_desc_icono_datos"
        android:onClick="datos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/iconografica" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="114dp"
        android:layout_height="89dp"
        android:contentDescription="@string/alarmas_imagen"
        android:onClick="alarma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224"
        app:srcCompat="@mipmap/iconoalertas"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="120dp"
        android:layout_height="93dp"
        android:contentDescription="@string/configuracion_imagen"
        android:onClick="irconfigurasensor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484"
        app:srcCompat="@mipmap/iconomas" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="120dp"
        android:layout_height="93dp"
        android:contentDescription="@string/conten_desc_ubicacion_imagen"
        android:onClick="irubica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484"
        app:srcCompat="@mipmap/iconoubicacion" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="120dp"
        android:layout_height="93dp"
        android:contentDescription="@string/engranage_imagen"
        android:onClick="irconfigura"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484"
        app:srcCompat="@mipmap/iconoconfiguracion"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:contentDescription="@string/logo_purpura"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/logo"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="100dp"
        android:layout_height="57dp"
        android:contentDescription="@string/perfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/perfil" />

</androidx.constraintlayout.widget.ConstraintLayout>