<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity9">




    <EditText
        android:id="@+id/editTextTextPassword6"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/Telefono_m_vil"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.699"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPassword7"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/nombre_y_apellido"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPassword5"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/Municipio"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/purple_500"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    app:popupTheme="@style/Theme.Quickliate.PopupOverlay" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="69dp"
        android:layout_height="53dp"
        android:contentDescription="@string/perfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/perfil" />
    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:contentDescription="@string/logo_purpura"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/logo"
        tools:ignore="ImageContrastCheck" />


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />



    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/cargo"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/direccion_de_residencia"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.489"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/Departamento"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="260dp"
        android:layout_height="58dp"
        android:text="@string/agregar_nuevo_usuario"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />


</androidx.constraintlayout.widget.ConstraintLayout>