<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="iraconfi"
    tools:context=".Activity13">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:popupTheme="@style/Theme.Quickliate.PopupOverlay" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="100dp"
        android:layout_height="57dp"
        android:contentDescription="@string/perfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/perfil" />
    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:contentDescription="@string/logo_purpura"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/logo"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="120dp"
        android:layout_height="93dp"
        android:contentDescription="@string/imgdato"
        android:onClick="irdatos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246"
        app:srcCompat="@mipmap/iconografica" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="120dp"
        android:layout_height="93dp"
        android:contentDescription="@string/conten_desc_alarma_imagen"
        android:onClick="iralarm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/iconoalertas"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="120dp"
        android:layout_height="93dp"
        android:contentDescription="@string/conten_desc_configuracion_imagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753"
        app:srcCompat="@mipmap/iconoconfiguracion"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>